# bundesmonitor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  LICENSE  OFFICIAL_SOURCE_RESEARCH.md  README.md  README_START_HERE.md  SHA256SUMS.txt  capacitor.config.ts  demo-app.html  demo.html  docker-compose.yml  manifest.json  package-lock.json  package.json
.github/workflows/: ci.yml  dip-key-rotate.yml  pks-update.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/src/bundesmonitor_api/: __init__.py  deps.py  main.py  schemas.py
apps/api/src/bundesmonitor_api/data/: appversion.json
apps/api/src/bundesmonitor_api/routers/: appversion.py  catalog.py  feed.py  health.py  kennzahlen.py  local.py  matters.py  votes.py
apps/api/tests/: conftest.py  test_feed_api.py  test_health.py  test_kennzahlen_api.py
apps/web/: Dockerfile  eslint.config.mjs  next.config.mjs  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  manifest.ts  (+2 more)
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/bundesmonitor_worker/: __init__.py  celery_app.py
apps/worker/src/bundesmonitor_worker/tasks/: dip.py  health.py  rss.py  votes.py
apps/worker/tests/: test_dip_task.py  test_health_task.py  test_rss_task.py
config/: sources.yaml
docs/: 01_PRODUCT_BRIEF.md  02_INFORMATION_ARCHITECTURE.md  03_UI_UX_SPEC.md  04_SOURCE_CATALOG.md  05_DATA_MODEL.md  06_INGESTION_AND_MATCHING.md  07_API_CONTRACT.md  08_EDITORIAL_AI_RULES.md  09_SECURITY_LEGAL_ACCESSIBILITY.md  10_ROADMAP_ACCEPTANCE.md  11_UI_COPY.md
docs/adr/: 0001-architektur-grundlagen.md  0002-serverlose-architektur-dip-direkt.md  0003-parteifarben-als-identifikation.md
prompts/: 00_master_prompt.md  01_mvp_bootstrap.md  02_collectors.md  03_frontend.md  04_quality_review.md
prototype/: README.md  index.html
scripts/: bootstrap.ps1  bootstrap.sh  build_apk.ps1  dip-key-rotate.mjs  gen_icons.mjs  pks-update.mjs  quickstart_local.ps1
(+118 files in other folders)
