[project]
name = "bundesmonitor-api"
version = "0.1.0"
description = "Oeffentliche Lese-API (Feed, Vorgaenge, Quellenstatus)."
requires-python = ">=3.12"
dependencies = [
    "bundesmonitor-core",
    "fastapi>=0.111,<0.117",
    "uvicorn[standard]>=0.30,<0.36",
    "alembic>=1.13,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "httpx>=0.27,<0.28",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["bundesmonitor_api"]
mypy_path = "src"
