[project]
name = "bundesmonitor-worker"
version = "0.1.0"
description = "Celery-Worker und Beat: Collectors, Normalisierung, Wartung."
requires-python = ">=3.12"
dependencies = [
    "bundesmonitor-core",
    "celery[redis]>=5.4,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["bundesmonitor_worker"]
mypy_path = "src"

# Celery liefert keinen py.typed-Marker und untypisierte Task-Dekoratoren.
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["celery.*"]
ignore_missing_imports = true
